[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amonite_mathorga"
version = "0.0.1"
authors = [
  { name = "Luka Micheletti", email = "michelettiluka@gmail.com" },
]
description = "A basic game engine built around pyglet"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Mathorga/amonite"
Issues = "https://github.com/Mathorga/amonite/issues"